--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "postprocessing": "^6.37.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.8.1",
+    "react-syntax-highlighter": "^16.1.0",
+    "remark-gfm": "^4.0.1",
     "three": "^0.179.1"
   },
   "devDependencies": {
